# interactive-visualisation

./: README.md  gnomes.dot  graphtest.dot  graphtest.dot.plain  interactive-visualisation.cabal  pos.txt  runIV.sh  stack.yaml  testing.dot.plain
.stack-work/install/x86_64-linux/lts-8.0/8.0.2/flag-cache/: GLFW-b-1.4.8.1-1V1u4vvq5bWIFWVhVPjY4A  GLURaw-2.0.0.3-G12M6COyQIU5WfRlrIwPuj  GLUT-2.7.0.11-IP0PzJz4wI8KYXyKTnttpl  HTTP-4000.3.5-J3FRIDA0OGiJpLXZa2UC8z  JuicyPixels-3.2.8-JQG2D4nVzpU8XevZTzbbIE  ObjectName-1.1.0.1-EiFOWjUQWWuLyOhtrmuIWX  OpenGL-3.0.1.0-BckrJgI63aX3I0VRJxU6fY  OpenGLRaw-3.2.4.0-JDyGgOXR61GG549SwmWm2Q  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  base-compat-0.9.1-B9geVZFtCvE8ERS7UcvkRz  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  bindings-DSL-1.0.23-9846xW4j4xCElj7TO2xbld  bindings-GLFW-3.1.2.2-8A8NDyit2GUAksQpR7G7mj  bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ  cabal-install-1.24.0.2  colour-2.3.3-7zspnmhVLMd3uThUzy60rY  cryptohash-sha256-0.11.100.1-4jVo7W1Cec2JgABhLoMmkP  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  ed25519-0.0.5.0-DOxHK22XPn0HrMBTHVASla  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fgl-5.5.3.0-2sNS3Wnitgh1EFrdBQMbFh  fixed-0.2.1.1-8Jr82l0kss5Gr4nEevmXlZ  gloss-1.10.2.5-Cjq2LIsB60XBDXiLGr6ISz  gloss-juicy-0.2.2-KJBjZkZxx1lENj8OGK4Ifn  gloss-rendering-1.10.3.5-4njwxhM0L51DDTj3f5QCty  graphviz-2999.18.1.2-I9dmpFhAddS1sgi4qbfiqU  half-0.2.2.3-GHJ372Ls7FBA3PAGtGHfOR  (+18 more)
src/: Gnomes.hs  Main.hs  WriteRunDot.hs  graphtest.dot  graphtest.dot.plain  graphtest.dot.xdot  test2.dot
(+4 files in other folders)
