name:                interactive-visualisation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/interactive-visualisation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable interactive-visualisation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4 && < 5,
                       text == 1.2.2.1,
                       fgl == 5.5.3.0,
                       filepath == 1.4.1.1,
                       gloss-juicy,
                       GLFW-b == 1.*,
                       bytestring,
                       gloss == 1.10.2.5,
                       gloss-rendering  == 1.10.3.5,
                       GLUT == 2.7.0.11,
                       split,
                       mtl,
                       containers,
                       process
  ghc-options:         -O2 -Wall
